WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67423
QNX GCC distribution doesn't support vasprintf()
https://bugs.webkit.org/show_bug.cgi?id=67423
Summary
QNX GCC distribution doesn't support vasprintf()
Daniel Bates
Reported
2011-09-01 12:22:21 PDT
vasprintf() isn't supported under the QNX GCC distribution.
Attachments
Patch
(1.13 KB, patch)
2011-09-01 12:25 PDT
,
Daniel Bates
tonikitoo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2011-09-01 12:25:32 PDT
Created
attachment 106008
[details]
Patch
Daniel Bates
Comment 2
2011-09-01 14:05:52 PDT
Committed
r94342
: <
http://trac.webkit.org/changeset/94342
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug