QNX GCC distribution doesn't support vasprintf() https://bugs.webkit.org/show_bug.cgi?id=67423

Reviewed by Antonio Gomes.

* wtf/Platform.h: Don't enable HAVE_VASPRINTF when building with GCC on QNX.


git-svn-id: svn://svn.chromium.org/blink/trunk@94342 bbb929c8-8fbe-4397-9dbb-9b2b20218538